@@ -11,7 +11,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -54,7 +53,7 @@ public class JdbcOfficerDAOTest {
     public void findAll() {
         List<String> dbNames = dao.findAll().stream()
                                   .map(Officer::getLastName)
-                                  .collect(Collectors.toList());
+                                  .toList();
         assertThat(dbNames).contains("Kirk", "Picard", "Sisko", "Janeway", "Archer");
     }
 
