@@ -12,7 +12,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
@@ -59,7 +58,7 @@ public class JpaOfficerDAOTest {
     public void findAll() {
         List<String> dbNames = dao.findAll().stream()
                                   .map(Officer::getLastName)
-                                  .collect(Collectors.toList());
+                                  .toList();
         assertThat(dbNames).contains("Kirk", "Picard", "Sisko", "Janeway", "Archer");
     }
 
